--- a/ProyectoVickyGaby2/src/Interfaces/Pantalla.form
+++ b/ProyectoVickyGaby2/src/Interfaces/Pantalla.form
@@ -81,7 +81,6 @@
                               <Group type="102" alignment="1" attributes="0">
                                   <EmptySpace min="0" pref="19" max="32767" attributes="0"/>
                                   <Component id="jLabel3" min="-2" max="-2" attributes="0"/>
-                                  <EmptySpace max="-2" attributes="0"/>
                                   <Group type="103" groupAlignment="0" max="-2" attributes="0">
                                       <Group type="102" attributes="0">
                                           <EmptySpace min="12" pref="12" max="-2" attributes="0"/>
@@ -228,6 +227,9 @@
               <Events>
                 <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jtreeArchivosMouseClicked"/>
               </Events>
+              <AuxValues>
+                <AuxValue name="JavaCodeGenerator_CreateCodeCustom" type="java.lang.String" value="new javax.swing.JTree(root)"/>
+              </AuxValues>
             </Component>
           </SubComponents>
         </Container>
