--- a/ProyectoVickyGaby2/src/Interfaces/Pantalla.form
+++ b/ProyectoVickyGaby2/src/Interfaces/Pantalla.form
@@ -255,7 +255,7 @@
         </Component>
         <Component class="javax.swing.JLabel" name="jlabelCrearArchivo">
           <Properties>
-            <Property name="text" type="java.lang.String" value="jLabel7"/>
+            <Property name="text" type="java.lang.String" value="Status: OK"/>
           </Properties>
         </Component>
       </SubComponents>
